--- a/video-making2.html
+++ b/video-making2.html
@@ -190,21 +190,21 @@
                                 <div class="cut-way-wrap flex">
                                     <div class="cut-ai cut-item flex b2-show">
                                         <span class="cut-icon">
-                                            <img src="img/videoMaking/cut-ai.svg" alt="AI 자르기">
+                                            <img class="cut-img" src="img/videoMaking/cut-ai.svg" alt="AI 자르기">
                                         </span>
                                         <ul class="cut-text">
-                                            <li class="cut-title">AI 자르기</li>
-                                            <li class="cut-cap">시청자의 관심을 살 수 있는 구간을 AI가 찾아내어 편집합니다.</li>
+                                            <li class="cut-title cut-text-item">AI 자르기</li>
+                                            <li class="cut-cap cut-text-item">시청자의 관심을 살 수 있는 구간을 AI가 찾아내어 편집합니다.</li>
                                         </ul>
                                     </div>
 
                                     <div class="cut-slef cut-item flex">
                                         <span class="cut-icon">
-                                            <img src="img/videoMaking/cut-self.svg" alt="셀프 자르기">
+                                            <img class="cut-img" src="img/videoMaking/cut-self.svg" alt="셀프 자르기">
                                         </span>
                                         <ul class="cut-text">
-                                            <li class="cut-title">셀프 자르기</li>
-                                            <li class="cut-cap">시청자에게 보일 내용을 목적에 맞게 구간을 설정시킵니다. (최대 5개)</li>
+                                            <li class="cut-title cut-text-item">셀프 자르기</li>
+                                            <li class="cut-cap cut-text-item">시청자에게 보일 내용을 목적에 맞게 구간을 설정시킵니다. (최대 5개)</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -286,38 +286,34 @@
                             <div class="past-wrap template-wrap none">
                                 <div class="past-container">
                                     <div class="title">내가 만든 템플릿</div>
-                                    <!-- 템플릿1 -->
-                                    <div class="past-item template-box">
-                                        <div class="template-edit template-100 b2-show">
-                                            <div class="templaete-inner">
+                                    <div class="past-item-container flex">
+                                        <!-- 템플릿1 -->
+                                        <div class="past-item template-box">
+                                            <div class="template-edit template-100 b2-show">
                                                 <div class="templaete-img">
                                                     <img class="img-item" src="img/template/recent-img.png" alt="지난 템플릿1">
                                                 </div>
                                             </div>
+                                            <div class="my-template-title">Dance battle</div>
                                         </div>
-                                        <div class="my-template-title">Dance battle</div>
-                                    </div>
-                                    <!-- 템플릿2 -->
-                                    <div class="past-item template-box">
-                                        <div class="template-edit template-100">
-                                            <div class="templaete-inner">
+                                        <!-- 템플릿2 -->
+                                        <div class="past-item template-box">
+                                            <div class="template-edit template-100">
                                                 <div class="templaete-img">
                                                     <img class="img-item" src="img/template/past-img2.png" alt="지난 템플릿2">
                                                 </div>
                                             </div>
+                                            <div class="my-template-title">Dance battle</div>
                                         </div>
-                                        <div class="my-template-title">Dance battle</div>
-                                    </div>
-                                    <!-- 템플릿3 -->
-                                    <div class="past-item template-box">
-                                        <div class="template-edit template-100">
-                                            <div class="templaete-inner">
+                                        <!-- 템플릿3 -->
+                                        <div class="past-item template-box">
+                                            <div class="template-edit template-100">
                                                 <div class="templaete-img">
                                                     <img class="img-item" src="img/template/past-img2.png" alt="지난 템플릿2">
                                                 </div>
                                             </div>
+                                            <div class="my-template-title">Dance battle</div>
                                         </div>
-                                        <div class="my-template-title">Dance battle</div>
                                     </div>
                                 </div>
                             </div>
