--- a/find-pw-complete.html
+++ b/find-pw-complete.html
@@ -47,12 +47,12 @@
                     </div>
                     <div class="input_wrap">
                         <div class="input_container">
-                            <label for="new-pw" class="input_title">
+                            <label for="newPw" class="input_title">
                                 <input type="password" id="newPw" placeholder="새 비밀번호">
                             </label>
                         </div>
                         <div class="input_container m-top20">
-                            <label for="check-pw" class="input_title">
+                            <label for="checkPw" class="input_title">
                                 <input type="password" id="checkPw" placeholder="비밀번호 확인">
                             </label>
                         </div>
