--- a/register-form.html
+++ b/register-form.html
@@ -78,8 +78,8 @@
 
                         <div class="m-top40">주민번호 입력</div>
                         <div class="input_container m-top20 residentNum-input">
-                            <label for="fist-residentNum" class="resident-label">
-                                <input id="before-residentNum" class="fist-residentNum" type="text" placeholder="주민번호 앞자리 6자" maxlength="6"
+                            <label for="before-residentNum" class="resident-label">
+                                <input id="before-residentNum" class="before-residentNum" type="text" placeholder="주민번호 앞자리 6자" maxlength="6"
                                     inputmode="numeric" pattern="[0-9]*" oninput="this.value = this.value.replace(/[^0-9]/g, '')">
                             </label>
                             <span> - </span>
