--- a/project-wait.html
+++ b/project-wait.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
     <title>Viral | 변환 중</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -154,9 +155,9 @@
                                 <div class="project-wait-img">
                                     <img class="img-item" src="img/projectV/wait-img.png" alt="비디오 변환 중">
                                 </div>
-                                <h3 class="main-title font-IBM">예상 소요 시간은</h3>
                                 <h3 class="main-title font-IBM">
-                                    <span class="highlight-time">0분 00초</span>입니다
+                                    예상 소요 시간은 
+                                    <span class="highlight-time font-IBM">0분 00초</span>입니다
                                 </h3>
                                 <div class="guide-title">
                                     <span>이용자 대기순번에 따라 소요 시간이 바뀔 수 있습니다.</span>
